[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/commodities/TradingList.gd" type="Script" id=1]
[ext_resource path="res://ui/skins/green-plus-24.png" type="Texture" id=2]
[ext_resource path="res://ui/skins/red-x-24.png" type="Texture" id=3]

[node name="TradingList" type="Tree"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6
hide_root = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
increment_texture = ExtResource( 2 )
decrement_texture = ExtResource( 3 )

[connection signal="button_pressed" from="." to="." method="_on_Tree_button_pressed"]
[connection signal="column_title_pressed" from="." to="." method="_on_TradingList_column_title_pressed"]
[connection signal="focus_exited" from="." to="." method="_on_Tree_focus_exited"]
[connection signal="item_edited" from="." to="." method="_on_Tree_item_edited"]
[connection signal="item_selected" from="." to="." method="_on_Tree_item_selected"]
[connection signal="nothing_selected" from="." to="." method="_on_Tree_nothing_selected"]
